Fri Jun 11 13:07:35 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/RepositoryManager/Repository_Manager.cpp:

          Uncommented some code which was accidentally
          commented in my previous commit.

Fri Jun 11 12:55:49 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.tpp:
        * DnC/RepositoryManager/RepositoryManager_Impl.cpp:
        * DnC/RepositoryManager/Repository_Manager.cpp:

          Made changes to free up memory created by XMLString::
          transcode operations.

Fri Jun 11 12:07:27 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/Config_Handlers/Process_Element.cpp:
	* DnC/Config_Handlers/Process_Element.i:
	* DnC/Config_Handlers/Process_Element.tpp:
	* DnC/Config_Handlers/Utils.cpp:
	* DnC/Config_Handlers/Utils.h:
	* DnC/Config_Handlers/RepositoryManager_Impl.cpp:
	* DnC/RepositoryManager/Repository_Manager.cpp:

	Deleted the duplicate definition of create_doc & create_doc is
        replaced with create_parser.

Fri Jun 11 00:10:42 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.cpp:
        * DnC/Config_Handlers/Utils.cpp:
        * DnC/Config_Handlers/Utils.h:
        * DnC/RepositoryManager/RepositoryManager_Impl.cpp:
        * DnC/RepositoryManager/Repository_Manager.cpp:

          Fixed segmentation faults, traced during integration
          teting.

Thu Jun 10 18:24:58 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.tpp:

          More memory leaks fixed.

Thu Jun 10 18:12:44 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.cpp:
        * DnC/Config_Handlers/Property_Handler.cpp:
        * DnC/Config_Handlers/RS_Handler.cpp:
        * DnC/Config_Handlers/SP_Handler.cpp:

          Finally, Config_Handler directory compiles correctly

Thu Jun 10 18:06:52 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>
